Fixed gaps

--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,10 @@
   flex-shrink: 0;
 }
 
+.scene-scaler--vertical-bleed {
+  height: 100%;
+}
+
 .scene-canvas {
   position: absolute;
   top: 0;
